design Mobile navbar

--- a/Portfolio/Port.html
+++ b/Portfolio/Port.html
@@ -15,14 +15,29 @@
   <header class="header">
     <a href="#" class="logo">Upasana</a>
     <i class='bx bx-menu' id="menu-icon"></i>
+    <span class="close">&times;</span>
 
     <nav class="navbar">
-      <a href="#home" class="active">Home</a>
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#services">Services</a>
-      <a href="#portfolios">Portfolio</a>
-      <a href="#contact">Contact</a>
+      <ul>
+        <li>
+          <a href="#home" class="active">Home</a>
+        </li>
+        <li>
+          <a href="#about">About</a>
+        </li>
+        <li>
+          <a href="#skills">Skills</a>
+        </li>
+        <li>
+          <a href="#services">Services</a>
+        </li>
+        <li>
+          <a href="#portfolios">Portfolio</a>
+        </li>
+        <li>
+          <a href="#contact">Contact</a>
+        </li>
+      </ul>
     </nav>
   </header>
 
@@ -32,9 +47,9 @@
       <div class="img">
         <img src="C:\Users\upasa\Downloads\Upasana.png" alt="">
       </div>
-      <h1>Hello<span>.</span></h1>
-      <h1><span>I'm </span>Upasana Chaulagain</h1>
-      <h3><span> Frontend Developer</span></h3>
+      <h1>Hello<span class="intro">.</span></h1>
+      <h1><span class="intro">I'm </span>Upasana Chaulagain</h1>
+      <h3><span class="intro"> Frontend Developer</span></h3>
 
       <a href="#" class="btn">Download CV</a>
     </div>
@@ -47,7 +62,7 @@
     </div>
 
     <div class="aboutme">
-      <h2 class="heading">About <span>Me</span></h2>
+      <h2 class="heading">About <span class="intro">Me</span></h2>
       <h3>Frontend developer</h3>
       <p>I am web developer. I have great passion for designing and
         developing websites. I am currently Bachelor 4th semester IT Student. I have acquired the skills
@@ -63,15 +78,15 @@
   <!------------------ Skills Section ---------------------->
   <section class="skills" id="skills">
     <div class="skill"></div>
-    <h2 class="heading">My Coding <span>Skills</span></h2>
+    <h2 class="heading">My Coding <span class="intro">Skills</span></h2>
 
     <li>
-      <h3>Html</h3>
+      <h3>HTML</h3>
       <span class="bar"><span class="html"></span></span>
     </li>
 
     <li>
-      <h3>Css</h3>
+      <h3>CSS</h3>
       <span class="bar"><span class="css"></span></span>
     </li>
 
@@ -81,7 +96,7 @@
     </li>
 
     <li>
-      <h3>Php</h3>
+      <h3>PHP</h3>
       <span class="bar"><span class="php"></span></span>
     </li>
 
@@ -96,7 +111,7 @@
 
   <!------------------ Services Section ---------------------->
   <section class="services" id="services">
-    <h2 class="heading">My <span>Services</span></h2>
+    <h2 class="heading">My <span class="intro">Services</span></h2>
 
     <div class="services-container">
       <div class="services-box">
@@ -124,14 +139,13 @@
           facilis modi officiis odio, reprehenderit doloremque possimus. Veritatis laborum possimus dolor nobis
           asperiores.</p>
         <a href="#" class="btn">Read More</a>
-        <script src="js/leo.js"></script>
       </div>
 
   </section>
 
   <!----------------- Portfolio Section --------------------->
   <section class="portfolio" id="portfolios">
-    <h2 class="heading">Latest <span>Project</span></h2>
+    <h2 class="heading">Latest <span class="intro">Project</span></h2>
     <div class="portfolio-container">
       <img src=" " alt=" ">
       <div class="portfolio-layers">
@@ -148,7 +162,7 @@
 
   <!------------------ Contact Section ---------------------->
   <section class="contact" id="contact">
-    <h2 class="heading">Contact<span> Me!</span></h2>
+    <h2 class="heading">Contact<span class="intro"> Me!</span></h2>
 
     <form action="#">
       <div class="input-box">
